--- a/base-frontend/src/app/core/layout/layout.component.html
+++ b/base-frontend/src/app/core/layout/layout.component.html
@@ -1,32 +1,14 @@
-<mat-drawer-container class="container" autosize>
-
-  <mat-drawer #drawer class="example-sidenav" mode="side">
-    <div class="sidenav-wrapper">
-      <div class="header">
-        <div class="sidenav-title">
-          <h3>Title</h3>
-        </div>
-        <div class="sidenav-sub-title">
-          <h4>SubTitle</h4>
-        </div>
-      </div>
-      <div class="sidenav-content">
-        <ul class="menu-list">
-          <li [routerLink]="['/home']">Home</li>
-          <li [routerLink]="['/home/cart']">Cart</li>
-          <li [routerLink]="['/home/food']">Food</li>
-        </ul>
-      </div>
-    </div>
-  </mat-drawer>
-
-  <div class="example-sidenav-content">
-
-    <img class="header-thumbnail"  />
-    <button type="button" mat-button (click)="drawer.toggle()">
-      Toggle sidenav
-    </button>
-    <router-outlet></router-outlet>
-  </div>
+<mat-toolbar>
+  <span [routerLink]="['/food']">Food Shop</span>
+  <span class="example-spacer"></span>
   
-</mat-drawer-container>
+  <!-- Bejelentkezett felhasználó esetén -->
+  <mat-search-bar></mat-search-bar>
+  <button mat-button [routerLink]="['/login']">Logout</button>
+
+  <!-- Anonim felhasználó esetén -->
+  <button mat-button [routerLink]="['/login']" > Login </button>
+  <button mat-button [routerLink]="['/registration']">Registration</button>
+
+</mat-toolbar>
+<router-outlet></router-outlet>
