--- a/base-frontend/src/app/core/layout/layout.component.scss
+++ b/base-frontend/src/app/core/layout/layout.component.scss
@@ -1,35 +1,3 @@
-.sidenav-wrapper {
-  width: 15vw;
-  .header {
-    margin-left: 10px;
-    margin-top: 20px;
-  }
-}
-.header-thumbnail {
-  width: 100%;
-}
-
-.sidenav-content {
-  margin-left: -20px;
-  .menu-list {
-    & > * {
-      list-style-type: none;
-
-      margin: 10px;
-      padding: 0;
-      border-bottom: solid lightcoral 1px;
-      &:hover {
-        color: pink;
-        cursor: pointer;
-      }
-    }
-  }
-}
-
-.container {
-  height: 100%;
-}
-
-.sidenav-content {
-  height: 100%;
+.example-spacer {
+  flex: 1 1 auto;
 }
