--- a/base-frontend/src/app/core/registration/registration.component.html
+++ b/base-frontend/src/app/core/registration/registration.component.html
@@ -1,24 +1,27 @@
 <div class="container">
   <mat-card class="login-card">
     <mat-card-title class="title">
-      <img src="../../../assets/caff-icon-o.png" alt="icon">
+      <img src="../../../assets/caff-icon-o.png" alt="icon" />
     </mat-card-title>
     <mat-card-subtitle class="title">
-      <h1>Login</h1>
+      <h1>Registration</h1>
     </mat-card-subtitle>
     <mat-card-content class="content">
       <form class="form">
         <mat-form-field class="full-width">
           <mat-label>Username</mat-label>
-          <input matInput placeholder="Username" value="">
+          <input matInput placeholder="Username" value="" />
         </mat-form-field>
         <mat-form-field class="full-width">
           <mat-label>Password</mat-label>
-          <input matInput placeholder="Password" value="">
+          <input matInput placeholder="Password" value="" />
         </mat-form-field>
-        <mat-card-actions><button mat-button class="login-button">Log in</button></mat-card-actions>
+        <mat-card-actions
+          ><button mat-button class="login-button">
+            Registration
+          </button></mat-card-actions
+        >
       </form>
     </mat-card-content>
-  </mat-card> 
+  </mat-card>
 </div>
-
