--- a/base-frontend/src/app/core/login/login.component.html
+++ b/base-frontend/src/app/core/login/login.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <mat-card class="login-card">
     <mat-card-title class="title">
-      <img src="../../../assets/caff-icon-o.png" alt="icon">
+      <img src="../../../assets/caff-icon-o.png" alt="icon" />
     </mat-card-title>
     <mat-card-subtitle class="title">
       <h1>Login</h1>
@@ -10,15 +10,16 @@
       <form class="form">
         <mat-form-field class="full-width">
           <mat-label>Username</mat-label>
-          <input matInput placeholder="Username" value="">
+          <input matInput placeholder="Username" [value]="loginDto.username" />
         </mat-form-field>
         <mat-form-field class="full-width">
           <mat-label>Password</mat-label>
-          <input matInput placeholder="Password" value="">
+          <input matInput type="password" placeholder="Password" [value]="loginDto.password" />
         </mat-form-field>
-        <mat-card-actions><button mat-button class="login-button">Log in</button></mat-card-actions>
+        <mat-card-actions>
+          <button mat-button type="button" class="login-button" (click)="login()">Log in</button>
+        </mat-card-actions>
       </form>
     </mat-card-content>
-  </mat-card> 
+  </mat-card>
 </div>
-
