--- a/base-frontend/src/app/core/registration/registration.component.html
+++ b/base-frontend/src/app/core/registration/registration.component.html
@@ -10,17 +10,17 @@
       <form class="form">
         <mat-form-field class="full-width">
           <mat-label>Username</mat-label>
-          <input matInput placeholder="Username" value="" />
+          <input matInput placeholder="Username" [value]="registerDto.username" />
         </mat-form-field>
         <mat-form-field class="full-width">
           <mat-label>Password</mat-label>
-          <input matInput placeholder="Password" value="" />
+          <input matInput placeholder="Password" [value]="registerDto.password" />
         </mat-form-field>
-        <mat-card-actions
-          ><button mat-button class="login-button">
-            Registration
-          </button></mat-card-actions
-        >
+        <mat-form-field class="full-width">
+          <mat-label>Confirm password</mat-label>
+          <input matInput placeholder="Password" [value]="registerDto.confirmPassword" />
+        </mat-form-field>
+        <mat-card-actions><button mat-button type="button" class="login-button" (click)="registration()">Registration</button></mat-card-actions>
       </form>
     </mat-card-content>
   </mat-card>
