--- a/base-frontend/src/app/core/layout/layout.component.html
+++ b/base-frontend/src/app/core/layout/layout.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar>
-  <span [routerLink]="['/food']">Food Shop</span>
+  <span [routerLink]="['/caff']">Caff Shop</span>
   <span class="example-spacer"></span>
   
   <!-- Bejelentkezett felhasználó esetén -->
