--- a/base-frontend/src/app/core/login/login.component.html
+++ b/base-frontend/src/app/core/login/login.component.html
@@ -10,11 +10,11 @@
       <form class="form">
         <mat-form-field class="full-width">
           <mat-label>Username</mat-label>
-          <input matInput placeholder="Username" [value]="loginDto.username" />
+          <input matInput placeholder="Username"  name="username"  [(ngModel)]="loginDto.username" />
         </mat-form-field>
         <mat-form-field class="full-width">
           <mat-label>Password</mat-label>
-          <input matInput type="password" placeholder="Password" [value]="loginDto.password" />
+          <input matInput type="password" placeholder="Password"  name="password"  [(ngModel)]="loginDto.password" />
         </mat-form-field>
         <mat-card-actions>
           <button mat-button type="button" class="login-button" (click)="login()">Log in</button>
