--- a/base-frontend/src/app/core/registration/registration.component.html
+++ b/base-frontend/src/app/core/registration/registration.component.html
@@ -10,15 +10,15 @@
       <form class="form">
         <mat-form-field class="full-width">
           <mat-label>Username</mat-label>
-          <input matInput placeholder="Username" [value]="registerDto.username" />
+          <input matInput placeholder="Username" name="username" [(ngModel)]="registerDto.username" />
         </mat-form-field>
         <mat-form-field class="full-width">
           <mat-label>Password</mat-label>
-          <input matInput placeholder="Password" [value]="registerDto.password" />
+          <input matInput placeholder="Password" name="password" [(ngModel)]="registerDto.password" />
         </mat-form-field>
         <mat-form-field class="full-width">
           <mat-label>Confirm password</mat-label>
-          <input matInput placeholder="Password" [value]="registerDto.confirmPassword" />
+          <input matInput placeholder="Password" name="confirmPassword" [(ngModel)]="registerDto.confirmPassword" />
         </mat-form-field>
         <mat-card-actions><button mat-button type="button" class="login-button" (click)="registration()">Registration</button></mat-card-actions>
       </form>
