--- a/base-frontend/src/app/core/login/login.component.html
+++ b/base-frontend/src/app/core/login/login.component.html
@@ -16,6 +16,9 @@
           <mat-label>Password</mat-label>
           <input matInput type="password" placeholder="Password"  name="password"  [(ngModel)]="loginDto.password" />
         </mat-form-field>
+        <mat-error *ngIf="errorMessage">
+          Something wrong, please check the form.
+        </mat-error>
         <mat-card-actions>
           <button mat-button type="button" class="login-button" (click)="login()">Log in</button>
         </mat-card-actions>
