--- a/base-frontend/src/app/core/login/login.component.scss
+++ b/base-frontend/src/app/core/login/login.component.scss
@@ -6,7 +6,7 @@
   // align-items: center;
   padding-top: 3rem;
   height: 100vh;
-  width: 100vw;
+  width: 100%;
   background-color: $dark-grey;
 
   .login-card {
