--- a/base-frontend/src/app/feature/caff/caff-add-dialog/caff-add-dialog.component.scss
+++ b/base-frontend/src/app/feature/caff/caff-add-dialog/caff-add-dialog.component.scss
@@ -1,4 +1,6 @@
 @import 'bulma/css/bulma.min.css';
+@import '../../../app.component.scss';
+
 h1 {
   font-size: 1.5rem;
 }
@@ -28,4 +30,38 @@ h1 {
     line-height: 2.5rem;
     height: 100%;
   }
+}
+.cover-image {
+  max-width: 20rem;
+  max-height: 32rem;
+}
+
+.side-buffer {
+  margin-right: 1rem;
+  margin-bottom: 0.5rem;
+}
+
+
+.mat-card-content{
+  div{
+    padding: 0.5rem;
+  }
+  button{
+    background-color: $orange;
+  }
+}
+
+::ng-deep .mat-form-field.mat-focused {
+    .mat-form-field-label {
+        color: $orange;
+    }
+    .mat-form-field-ripple {
+        background-color: $orange;
+    }
+    .mat-form-field-required-marker {
+        color:$orange;
+    }
+    .mat-input-element {
+        color: $white;
+    }
 }
